--- a/software.html
+++ b/software.html
@@ -39,12 +39,32 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698350225-backend-software-engineer-apps-team'>Tradeshift Backend Software Engineer - Apps Team | SmartRecruiters</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oPN89fwD&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYiXmMwQ'>Palo Alto Networks Careers - Senior Cloud Software Engineer (Cloud Security Infrastructure)</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwkaVfwF&k=Job&j=oqHQafwR&__jvst=Employee&__jvsd=syGWShwO&__jvsc=Twitter&bid=nzaXmMwj&jvi=oqHQafwR,Job&jvk=Job'>Schneider Electric - UK Careers - Software Engineer - C.C++.C# Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698352207-senior-software-engineer'>lm group Senior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Madrid, Spain</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698352476-software-developer-ocr-technology-internship'>Bosch Group Software Developer OCR Technology - Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Italy</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://aa067.referrals.selectminds.com/jobs/software-developer-senior-research-2674'>Software Developer, Senior Research - City of Hope Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698350225-backend-software-engineer-apps-team'>Tradeshift Backend Software Engineer - Apps Team | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698350907-senior-react-native-software-engineer-joining-bonus-'>KMS Technology SENIOR REACT NATIVE SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/bjss/jobs/1931346'>Job Application for Software Engineer  at BJSS</a></h5> 
@@ -75,7 +95,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tealium/75baeb2b-94a5-4d89-b746-9afa7227c02f'>Tealium - Software Engineer - Data Platform - Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tealium/75baeb2b-94a5-4d89-b746-9afa7227c02f'>Tealium - Software Engineer - Data Platform - Java</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -99,7 +119,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698343930-senior-net-application-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET APPLICATION SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698343930-senior-net-application-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET APPLICATION SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -131,7 +151,7 @@
 <p><span class="badge badge-light">London London  London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -199,7 +219,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -223,11 +243,11 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1934626'>Job Application for Senior Software Engineer - Phone Numbers at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1934626'>Job Application for Senior Software Engineer - Phone Numbers at Twilio</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698263336-software-engineer-new-graduates-last-year-students-'>RAKUNA Software Engineer (New Graduates, Last Year Students) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999698263336-software-engineer-new-graduates-last-year-students-'>RAKUNA Software Engineer (New Graduates, Last Year Students) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -247,7 +267,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://zigzag.applytojob.com/apply/edkiY2Wb8f/Senior-Software-Engineer-Python-Engineer'>Senior Software Engineer - Python Engineer - ZigZag Careers - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/edkiY2Wb8f/Senior-Software-Engineer-Python-Engineer'>Senior Software Engineer - Python Engineer - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -335,7 +355,7 @@
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oeRDafwC&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nnNpmMwc'>ServiceNow Careers - Staff/Senior Staff Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oeRDafwC&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nnNpmMwc'>ServiceNow Careers - Staff/Senior Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -349,7 +369,7 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4494241002'>Job Application for Senior Software Engineer (with DevOps experience) at Punchh</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -377,7 +397,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oTPfbfwS&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nhghmMwr'>Egnyte Careers - Senior Software Engineer - Cloud</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oTPfbfwS&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=nhghmMwr'>Egnyte Careers - Senior Software Engineer - Cloud</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -427,29 +447,7 @@ looking?...</p>
 <p><span class="badge badge-light">Raleigh, North Carolina United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/software-developer-in-test-27487'>Software Developer in Test - RELX Careers</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
-<p><span class="badge badge-light">Arlington, VA</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qnwaVfwI&k=Job&j=o4vOafwh&__jvst=Employee&__jvsd=skn1Shwm&__jvsc=Twitter&bid=nPc4lMwH'>Achievement Network (ANet) Careers - Software Engineer</a></h5> 
-<p><span class="badge badge-light">Boston, Massachusetts  United States  United States Boston</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://peanut.recruitee.com/o/senior-software-engineer-backend'>
-      Senior Software Engineer (Backend) - Peanut
-    </a></h5> 
-<p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Nexthink/743999698295735-senior-software-engineer-c-'>Nexthink Senior Software Engineer (C++) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Lausanne, Switzerland</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
